# fc3-lsgen

./: README.md  meson.build
src/: cli.c  cli.h  main.c  meson.build
